# reterm

./: CMakeLists.txt  main.cpp  main.qml  mainwindow.ui
